syntax = "proto3";

package versatilis;

option go_package = "../versatilis";


message Package {
    bytes ciphertext = 10;   
    bytes authtag = 20;   
}

// this should be a fixed size (when marshalled)
message PackageHdr {
    uint32 packageSize = 20;
}

message HandshakeMsg {
    bytes message = 10;
}

message HandshakeMsgHdr {
    uint32 size = 10;
}

